done for phone version

--- a/index.html
+++ b/index.html
@@ -128,115 +128,126 @@
       <img src="image/eazi-wave-green-desktop.591e7153.png" alt="" id="green" />
       <img src="image/audience-patterns.5d18a20d.png" alt="" id="line" />
       <div id="business">
-        <h2 class="individual">For Individual and Businesses</h2>
-        <p class="b">Join 200+ business using Eazipay's easy solution</p>
-        <div id="cards">
-          <div class="card" id="card1">
-            <h3>Tamper-proof Payroll for Life</h3>
-            <p class="businessp">
-              Your staff payroll history is kept in one place forever.
-            </p>
-            <p class="businessp">No more excel sheet or manuel records.</p>
-            <p class="businessp">
-              Download your payroll history anytime you need it
-            </p>
-          </div>
-          <div class="card" id="card2">
-            <h3>All Payroll, Anytime Anywhere</h3>
-            <p class="businessp">
-              Wherever you are, Eazipay has got you covered on All your Payroll
-              tasks.
-            </p>
-            <p class="businessp">
-              Whether it is Taxes, Pension insurance HMOs, <br />
-              Easizpay handle all your compliances in one place and easily, in
-              secounds.
-            </p>
-          </div>
-          <div class="card" id="card3">
-            <h3>Payroll in seconds</h3>
-            <p class="businessp">
-              Never again will you spent more than 2 minutes on payroll.
-            </p>
-            <p class="businessp">
-              Just click on the staff and bulk-pay them at once .
-            </p>
-            <p class="businessp">Payment is done permanently</p>
-          </div>
+        <div>
+          <h2 class="individual">For Individual and Businesses</h2>
+          <p class="b">Join 200+ business using Eazipay's easy solution</p>
         </div>
-        <div id="a">
-          <p>We are happy to answer your queries.Please,reach to us at</p>
-          <p>
-            <span class="sec">mailto:hi@myeazipay.com</span>
-            and expect our response shortly after
-          </p>
+        <div class="cardp">
+          <div id="cards">
+            <div class="card" id="card1">
+              <h3>Tamper-proof Payroll for Life</h3>
+              <p class="businessp">
+                Your staff payroll history is kept in one place forever.
+              </p>
+              <p class="businessp">No more excel sheet or manuel records.</p>
+              <p class="businessp">
+                Download your payroll history anytime you need it
+              </p>
+            </div>
+            <div class="card" id="card2">
+              <h3>All Payroll, Anytime Anywhere</h3>
+              <p class="businessp">
+                Wherever you are, Eazipay has got you covered on All your <br />
+                Payroll tasks.
+              </p>
+              <p class="businessp">
+                Whether it is Taxes, Pension insurance HMOs, <br />
+                Easizpay handle all your compliances in one place and easily, in
+                <br />
+                secounds.
+              </p>
+            </div>
+            <div class="card" id="card3">
+              <h3>Payroll in seconds</h3>
+              <p class="businessp">
+                Never again will you spent more than 2 minutes on payroll.
+              </p>
+              <p class="businessp">
+                Just click on the staff and bulk-pay them at once .
+              </p>
+              <p class="businessp">Payment is done permanently</p>
+            </div>
+          </div>
+          <div id="a">
+            <p>We are happy to answer your queries.Please,reach to us at</p>
+            <p>
+              <span class="sec">mailto:hi@myeazipay.com</span>
+              and expect our response shortly after
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <section id="eazipaywork">
-      <div>
-        <h2 class="individual">How Eazipay Works</h2>
-        <p class="b">Get started in 3 simple steps</p>
-      </div>
-      <div id="eazyblock">
-        <div id="circlebar">
-          <div id="circle">
-            <div id="circle1">
-              <div id="circle2">
-                <div id="circle3"></div>
-              </div>
-            </div>
-          </div>
-          <img src="image/payroll.372ea3c0.gif" alt="" id="gif" />
+      <div id="yanmife">
+        <div class="eazipay_header">
+          <h2 class="individual">How Eazipay Works</h2>
+          <p id="b">Get started in 3 simple steps</p>
         </div>
-        <div id="stepdiv">
-          <div id="steps">
-            <div id="step1">
-              <div id="n1">
-                <div>1</div>
-                <div></div>
+        <div class="eaziwork_div">
+          <div id="eazyblock">
+            <div>
+              <div id="circlebar">
+                <div id="circle">
+                  <div id="circle1">
+                    <div id="circle2">
+                      <div id="circle3"></div>
+                    </div>
+                  </div>
+                </div>
+                <img src="image/payroll.372ea3c0.gif" alt="" id="gif" />
               </div>
             </div>
-            <div id="stepnote">
-              <h3>
-                Create your free <br />
-                account
-              </h3>
-              <div>
-                Click here to setup your <br />
-                Eazipay account
+            <div id="stepdiv">
+              <div id="steps">
+                <div id="step1">
+                  <div id="n1">
+                    <div>1</div>
+                    <div></div>
+                  </div>
+                </div>
+                <div id="stepnote">
+                  <h3>
+                    Create your free <br />
+                    account
+                  </h3>
+                  <div>
+                    Click here to setup your <br />
+                    Eazipay account
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div id="steps2">
-            <div id="step1">
-              <div id="n1">
-                <div>2</div>
-                <div></div>
+              <div id="steps2">
+                <div id="step1">
+                  <div id="n1">
+                    <div>2</div>
+                    <div></div>
+                  </div>
+                </div>
+                <div id="stepnote">
+                  <h3>Add Employee Data account</h3>
+                  <div>
+                    Your employee infomation is <br />
+                    100% safe and secure
+                  </div>
+                </div>
               </div>
-            </div>
-            <div id="stepnote">
-              <h3>Add Employee Data account</h3>
-              <div>
-                Your employee infomation is <br />
-                100% safe and secure
-              </div>
-            </div>
-          </div>
-          <div id="steps2">
-            <div id="step1">
-              <div id="n2">
-                <div>3</div>
-              </div>
-            </div>
-            <div id="stepnote">
-              <h3>
-                Prepare your <br />
-                Transaction
-              </h3>
-              <div>
-                Run payroll:Bulk salaries and<br />
-                Compliance are done at once!
+              <div id="steps2">
+                <div id="step1">
+                  <div id="n2">
+                    <div>3</div>
+                  </div>
+                </div>
+                <div id="stepnote">
+                  <h3>
+                    Prepare your <br />
+                    Transaction
+                  </h3>
+                  <div>
+                    Run payroll:Bulk salaries and<br />
+                    Compliance are done at once!
+                  </div>
+                </div>
               </div>
             </div>
           </div>
