phone version fix part2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="java.js"></script>
   </head>
   <body>
-    <div>
+    <div id="body">
       <div>
         <img src="image/gradients.fdc2f6b1.png" alt="" id="background" />
       </div>
