--- a/index.html
+++ b/index.html
@@ -95,32 +95,40 @@
         </div>
       </nav>
       <section id="Runpayroll">
-        <img src="image/hero-media-desktop.5f900d38.png" alt="" id="hero" />
-        <div>
-          <h2>
-            Run your <span class="pay">payroll</span>
-            <span id="eas">
-              <br />
-              easily </span
-            >in <span class="sec">seconds</span>
-          </h2>
-          <p>
-            We've bulit an all-inclusive simple solution for individual and
-            businesses to manage staff, pay salaries, bills, and relevant taxes
-            all at once
-          </p>
-        </div>
-        <div id="startfree">
-          <a href="">Start Using Free, Forever</a>
-        </div>
-        <div id="p">
-          <p>Download the Easizpay App</p>
-        </div>
-        <div id="store">
-          <a href=""> <img src="image/google-store.af961bc5.png" alt="" /></a>
-          <a href="" id="apple"
-            ><img src="image/apple-store.1c73f0ba.png" alt=""
-          /></a>
+        <div id="Runpayroll_1">
+          <img src="image/hero-media-desktop.5f900d38.png" alt="" id="hero" />
+          <div id="igwe">
+            <div id="runpay_header">
+              <h2>
+                Run your <span class="pay">payroll</span>
+                <span id="eas">
+                  <br />
+                  easily </span
+                >in <span class="sec">seconds</span>
+              </h2>
+              <p id="Runpayrollp">
+                We've bulit an all-inclusive simple solution for individual and
+                businesses to manage staff, pay salaries, bills, and relevant
+                taxes all at once
+              </p>
+            </div>
+            <div id="startfree_container">
+              <div id="startfree">
+                <a href="">Start Using Free, Forever</a>
+              </div>
+              <div id="p">
+                <p>Download the Easizpay App</p>
+              </div>
+              <div id="store">
+                <a href="">
+                  <img src="image/google-store.af961bc5.png" alt=""
+                /></a>
+                <a href="" id="apple"
+                  ><img src="image/apple-store.1c73f0ba.png" alt=""
+                /></a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
