Mobile version form label

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         onclick="myfunction2()"
                         id="require"
                       />
-                      <div class="B3" id="B2">
+                      <div class="B3" id="B2"                        onclick="myfunction2()">
                         <label for="">First Name</label>
                       </div>
                     </div>
@@ -362,7 +362,9 @@
                         onclick="myfunction()"
                         id="require"
                       />
-                      <div class="B3" id="B3" i><label>Last name</label></div>
+                      <div class="B3" id="B3" onclick="myfunction()">
+                        <label>Last name</label>
+                      </div>
                     </div>
                     <div class="D2">
                       <input
