individual and business fix for mobile

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <img src="image/audience-patterns.5d18a20d.png" alt="" id="line" />
       <div id="business">
         <div>
-          <h2 class="individual">For Individual and Businesses</h2>
+          <h2 class="individual">For Individual and <span class="individualspan"> Businesses</span></h2>
           <p class="b">Join 200+ business using Eazipay's easy solution</p>
         </div>
         <div class="cardp">
