--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div id="container_1">
             <div id="forever">
               <h2>
-                Free forever for your <br />
+                Free forever for your 
                 <span class="sec"> salary Payment</span>
               </h2>
               <div id="forever_1">
@@ -373,7 +373,7 @@
                         onclick="myfunction3()"
                         id="require"
                       />
-                      <div id="B1"><label>E-mail</label></div>
+                      <div id="B1" onclick="myfunction3()"><label>E-mail</label></div>
                     </div>
                     <div id="demo_button">
                       <button onclick="myfunction4()">Request Demo</button>
