mobile version card

--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
             <div class="card" id="card2">
               <h3>All Payroll, Anytime Anywhere</h3>
               <p class="businessp">
-                Wherever you are, Eazipay has got you covered on All your <br />
+                Wherever you are, Eazipay has got you covered on All your 
                 Payroll tasks.
               </p>
               <p class="businessp">
                 Whether it is Taxes, Pension insurance HMOs, <br />
                 Easizpay handle all your compliances in one place and easily, in
-                <br />
+              
                 secounds.
               </p>
             </div>
