mobile version additional section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </div>
         <div class="eaziwork_div">
           <div id="eazyblock">
-            <div>
+            <div class="circle_1">
               <div id="circlebar">
                 <div id="circle">
                   <div id="circle1">
@@ -545,7 +545,7 @@
               </a>
             </div>
           </div>
-          <div>
+          <div id="igwe">
             <div class="footer_part2">
               <div class="footer_part2_part1">
                 <h4 class="footer_part2_header">Products</h4>
